Fix menu z-index to always render above page content

--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ h3:hover {
   top: 10px;
   height: 70px;
   width: 100%;
+  z-index: 100;
 }
 
 }
